Fix width of viewscreen and wrap text

--- a/src/App.css
+++ b/src/App.css
@@ -29,11 +29,13 @@
 }
 
 .viewScreen {
+  max-width: 413px;
   height: 210px;
   background-color: #F4F6F7;
   font-size: 74px;
   text-align: right;
   padding: 14px;
+  word-wrap: break-word;
 }
 
 .calculator {
